--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 </div>
 <div>
 <div>
-    <div class="blog">
+    <!-- <div class="blog">
     <h3>Lastest From Blog</h3>
     <img src="download.jpeg"  class="in">
     <figcaption>February 28,2021<br><h3>Urban Jungle Bloggers</h3><br>A project started in 2013 by two friends to bring <br>more green into home</figcaption>
@@ -165,7 +165,7 @@
     <figcaption>June 22,2021<br><h3>Houseplantjournal</h3><br>Darryl cheng this blog tosimplest and clearest care tips about home plants. give people the <br></figcaption>
     <img src="f4.jpg" class="in">
     <figcaption>July 10,2021<br><h3>The sill- The plant Hunter</h3><br><p>The sill is a "morden plant destination for the<br>mordern plant lover"on this website,you will find<br>growing tips</p></figcaption>
-</div>
+</div> -->
 <div>
     <h3>We love our clients</h3>
     <p>The best testimonial</p>
